# UGR-2012-artificial-vision

va-01/: CMakeLists.txt  main.cpp
va-02/: CMakeLists.txt  cuestionario va-2.txt  main.cpp
va-03/: CMakeLists.txt  cuestionario-p3  main-p3.cpp  main.cpp
va-04/: CMakeLists.txt  cuestionario.odt  main-4.cpp  main.c
va-05/: CMakeLists.txt  cuestionario.odt  main.cpp
va-05-2/: CMakeLists.txt  main.cpp  salida
va-05-2/imagenes/: datos_stereo_example.txt
va-05/imagenes/: datos_stereo_example.txt  sgbm.txt
